Bug 437595 - konversation crash when editing defaut identities
Summary: konversation crash when editing defaut identities
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.8.21041
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords: drkonqi
: 414727 439509 439892 440936 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-24 07:55 UTC by Bruno Friedmann
Modified: 2021-12-19 15:27 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.8.21080
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno Friedmann 2021-05-24 07:55:38 UTC
Application: konversation (1.8.21041)

Qt Version: 5.15.2
Frameworks Version: 5.82.0
Operating System: Linux 5.12.3-1-default x86_64
Windowing System: X11
Drkonqi Version: 5.21.5
Distribution: "openSUSE Tumbleweed"

-- Information about the crash:
- What I was doing when the application crashed: I was firstly adding new server (lberachat). I've clicked on the edit buton of idendity (default)
To renew my password.
Once I close the 3 modal windows the crash occurs.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Konversation (konversation), signal: Segmentation fault
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7f22ff964880 (LWP 3402))]
[KCrash Handler]
#6  0x00007f2302347996 in operator== (s1=..., s2=...) at text/qstring.cpp:3437
#7  0x0000562da9701579 in NickInfo::setAccount (this=0x0, name=...) at /usr/src/debug/konversation-21.04.1-1.1.x86_64/src/irc/nickinfo.cpp:250
#8  0x0000562da970e155 in InputFilter::parseClientCommand (this=0x562dabf97df0, prefix=..., command=..., parameterList=..., messageTags=...) at /usr/include/qt5/QtCore/qshareddata.h:160
#9  0x0000562da96cb4ad in InputFilter::parseLine (line=..., this=0x562dabf97df0) at /usr/src/debug/konversation-21.04.1-1.1.x86_64/src/irc/inputfilter.cpp:123
#10 Server::processIncomingData (this=0x7ffd9a0fbc10) at /usr/src/debug/konversation-21.04.1-1.1.x86_64/src/irc/server.cpp:1366
#11 0x00007f23024ddc17 in QtPrivate::QSlotObjectBase::call (a=0x7ffd9a0fbe30, r=0x562dabf97cd0, this=0x562db22666a0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#12 doActivate<false> (sender=0x562dabf97d40, signal_index=3, argv=argv@entry=0x7ffd9a0fbe30) at kernel/qobject.cpp:3886
#13 0x00007f23024d6f60 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7f230278cba0, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffd9a0fbe30) at kernel/qobject.cpp:3946
#14 0x00007f23024e1b9a in QTimer::timeout (this=<optimized out>, _t1=...) at .moc/moc_qtimer.cpp:205
#15 0x00007f23024d394f in QObject::event (this=0x562dabf97d40, e=0x7ffd9a0fbfa0) at kernel/qobject.cpp:1336
#16 0x00007f2303069aff in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x562dabf97d40, e=0x7ffd9a0fbfa0) at kernel/qapplication.cpp:3632
#17 0x00007f23024a713a in QCoreApplication::notifyInternal2 (receiver=0x562dabf97d40, event=0x7ffd9a0fbfa0) at kernel/qcoreapplication.cpp:1063
#18 0x00007f23024fe0f3 in QTimerInfoList::activateTimers (this=0x562dab2078f0) at kernel/qtimerinfo_unix.cpp:643
#19 0x00007f23024fe9ac in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:183
#20 idleTimerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:230
#21 0x00007f23003b28b7 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#22 0x00007f23003b2c38 in ?? () from /usr/lib64/libglib-2.0.so.0
#23 0x00007f23003b2cef in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#24 0x00007f23024fed30 in QEventDispatcherGlib::processEvents (this=0x562dab207bd0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#25 0x00007f23024a5b7b in QEventLoop::exec (this=this@entry=0x7ffd9a0fc1e0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#26 0x00007f23024addb0 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#27 0x00007f2302908a9c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1867
#28 0x00007f2303069a75 in QApplication::exec () at kernel/qapplication.cpp:2824
#29 0x0000562da9647d3f in main (argc=<optimized out>, argv=0x7ffd9a0fc300) at /usr/src/debug/konversation-21.04.1-1.1.x86_64/src/main.cpp:149
[Inferior 1 (process 3402) detached]

Possible duplicates by query: bug 422092, bug 419229, bug 416379, bug 410586, bug 353672.

Reported using DrKonqi
Comment 1 Bug Janitor Service 2021-05-24 09:14:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konversation/-/merge_requests/52
Comment 2 Ahmad Samir 2021-07-03 18:50:23 UTC
Git commit 4be5cb0086f95bc3e97475a1ef6c2a879d258813 by Ahmad Samir.
Committed on 03/07/2021 at 18:50.
Pushed by ahmadsamir into branch 'master'.

InputFilter: check NickInfoPtr object isn't null before using it

IIUC, if the nick being checked is offline, we can get a nullptr; this also
matches how NickInfoPtr objects returned by Server::getNickInfo are used in
the code.

M  +3    -9    src/irc/inputfilter.cpp

https://invent.kde.org/network/konversation/commit/4be5cb0086f95bc3e97475a1ef6c2a879d258813
Comment 3 Friedrich W. H. Kossebau 2021-12-19 15:19:00 UTC
*** Bug 440936 has been marked as a duplicate of this bug. ***
Comment 4 Friedrich W. H. Kossebau 2021-12-19 15:20:08 UTC
*** Bug 439509 has been marked as a duplicate of this bug. ***
Comment 5 Friedrich W. H. Kossebau 2021-12-19 15:24:07 UTC
*** Bug 414727 has been marked as a duplicate of this bug. ***
Comment 6 Friedrich W. H. Kossebau 2021-12-19 15:27:16 UTC
*** Bug 439892 has been marked as a duplicate of this bug. ***