InputFilter: check NickInfoPtr object isn't null before using it

IIUC, if the nick being checked is offline, we can get a nullptr; this also
matches how NickInfoPtr objects returned by Server::getNickInfo are used in
the code.

BUG: 437595